DotnetAPI-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dotnetapi-service
spec:
  selector:
    app: dotnetapi
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: ClusterIP
